# kuka_ros2_ws_humble

./: .gitignore  .gitmodules  README.md  arm1_recByRobot_ext.xml  arm1_sentByRobot_ext.xml  arm2_recByRobot_ext.xml  frames_2025-09-03_17.54.06.gv  max_build.sh  max_commands.txt  received_motionstate.xml  sent_state.xml  tree.txt
benchmark_tests/: kr50_benchmark_log_0.csv  kr50_benchmark_log_1.csv  kr50_benchmark_log_2.csv  kr50_benchmark_log_3.csv  kr50_benchmark_log_4.csv  kr50_benchmark_log_5.csv
guidance_test/: plan_guidance_route_abdulla.py
guidance_test/guidance/: Guidance_1.py  drawing_functions.py
script/: analyse_benchmarks.py  run_benchmark_sequence.py  visualise2D.py  visualise3D.py
script/guidance/: Guidance2.py  abdulla_guidance.py  drawing_functions.py  helpers.py  optitrack_operations.py
src/kuka_kr50_E1_moveit_rsi/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/kuka_kr50_E1_moveit_rsi/launch/: RAMI_full_cell_control.launch.py  moveit_planning_rsi_RVIZ.launch.py  moveit_planning_rsi_benchmark.launch.py
src/kuka_kr50_E1_moveit_rsi/src/: kr50_E1_benchmark.cpp  kr50_E1_moveitcpp_driver.cpp
src/kuka_kr70_moveit_rsi/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/kuka_kr70_moveit_rsi/launch/: moveit_planning_rsi.launch.py  moveit_planning_rsi_RVIZ.launch.py
src/kuka_kr70_moveit_rsi/scripts/: move_done_listener.py
src/kuka_kr70_moveit_rsi/src/: kr70_moveitcpp_driver.cpp  kr70_moveitcpp_driver_v1.cpp
src/string_republisher/: CMakeLists.txt  package.xml
src/string_republisher/src/: string_republisher_node.cpp
